# morning-ops-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: morning-ops.yml
agents/: agent.py
prompts/: system.py
src/morning_ops_agent/: main.py
src/morning_ops_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/morning_ops_agent/agents/: agent.py
tools/: location.py  weather.py
